Slight changes to db.
